# luadec

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: config.lua  hello_world.lua  library.rs  main.rs
src/modules/: notzsh.lua  programs.lua  zsh.lua
