[package]
name = "luadec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
mlua = {version="0.9", features=["vendored", "lua54", "async", "send"]}
once_cell = "1.20.2"
serde = "1.0.214"
serde_json = "1.0.132"
